--- a/about/about.html
+++ b/about/about.html
@@ -19,7 +19,7 @@
 
       <div class="navbar-container">
         <nav class="navbar">
-          <a href="../index/index.html"> Home </a>
+          <a href="/index.html"> Home </a>
           <a href="about.html" class="active"> About</a>
           <a href="../contact/contact.html"> Contact </a>
           <a href="../pricing/pricing.html"> Pricing </a>
@@ -167,6 +167,6 @@
 
   </main>
   <script src="about.js"></script>
-  <script src="../common.js"></script>
+  <script src="/common.js"></script>
 </body>
 </html>
