--- a/trainers/trainers.html
+++ b/trainers/trainers.html
@@ -5,89 +5,93 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="img/png" href="../../Images/image-removebg-preview (11).png">
   <link rel="StyleSheet" href="../gym.css">
-  <title>ALPHA GYM WEBSITE </title>
+  <title>ALPHA GYM WEBSITE</title>
 </head>
+
 <body class="no-bg">
 
-  <header>
+<header>
+  <section class="header-container">
+    <div class="img-logo-text">
+      <img class="img-logo" src="../../Images/alpha-logo-original.png">
+      <h5 class="img-name"> Alpha </h5>
+    </div>
 
-    <section class="header-container">
-      <div class="img-logo-text">
-        <img class="img-logo" src="../../Images/alpha-logo-original.png">
-        <h5 class="img-name"> Alpha </h5>
+    <div class="navbar-container">
+      <nav class="navbar">
+        <a href="/index.html"> Home </a>
+        <a href="../about/about.html"> About</a>
+        <a href="../contact/contact.html"> Contact </a>
+        <a href="../pricing/pricing.html"> Pricing </a>
+        <a href="../trainers/trainers.html" class="active"> Trainers & Staffs </a>
+      </nav>
+    </div>
+  </section>
+</header>
+
+<main>
+
+  <section class="meet-top-container">
+
+    <h2 class="meet-top-title reveal">
+      Meet Our Coaches and Staffs!
+    </h2>
+
+    <!-- Owner -->
+    <div class="big-boss-card reveal">
+      <img class="img-meet-boss" src="../../Images/kurt-png.png">
+      <h2 class="img-title"> Alpha Lab Owner </h2>
+      <p class="img-name"> Rafael Demagiba </p>
+    </div>
+
+    <!-- Staff -->
+    <div class="staff-card-grid">
+      <div class="staff-card reveal">
+        <img class="staff-img" src="../../Images/women-new-1-removebg-preview.png">
+        <h2 class="staff-title"> Manager </h2>
+        <h3 class="staff-name"> Trisha Ann Malilin </h3>
       </div>
 
-      <div class="navbar-container">
-        <nav class="navbar">
-          <a href="../index/index.html"> Home </a>
-          <a href="../about/about.html"> About</a>
-          <a href="../contact/contact.html"> Contact </a>
-          <a href="../pricing/pricing.html"> Pricing </a>
-          <a href="../trainers/trainers.html" class="active"> Trainers & Staffs </a>
-        </nav>
-      </div>
-    </section>
-
-  </header>
-
-  <main>
-    <section class="meet-top-container">
-      <h2 class="meet-top-title"> Meet Our Coaches and Staffs! </h2>
-
-      <div class="big-boss-card">
-        <img class="img-meet-boss" src="../../Images/kurt-png.png">
-        <h2 class="img-title"> Alpha Lab Owner </h2>
-        <p class="img-name"> Rafael Demagiba </p>
+      <div class="staff-card reveal">
+        <img class="staff-img" src="../../Images/women4-removebg-preview.png">
+        <h2 class="staff-title"> Assistant Manager </h2>
+        <h3 class="staff-name"> Marta Magdangal </h3>
       </div>
 
+      <div class="staff-card reveal">
+        <img class="staff-img" src="../../Images/men-new-2.png">
+        <h2 class="staff-title"> Coach </h2>
+        <h3 class="staff-name"> Coach JB Navarro </h3>
+      </div>
+    </div>
 
-      <div class="staff-card-grid">
-        <div class="staff-card">
-          <img class="staff-img" src="../../Images/women-new-1-removebg-preview.png">
-          <h2 class="staff-title"> Manager </h2>
-          <h3 class="staff-name"> Trisha Ann Malilin </h3> 
-        </div>
-
-        <div class="staff-card">
-          <img class="staff-img" src="../../Images/women4-removebg-preview.png">
-          <h2 class="staff-title"> Assistant Manager </h2>
-          <h3 class="staff-name"> Marta Magdangal </h3> 
-        </div>
-
-        <div class="staff-card">
-          <img class="staff-img" src="../../Images/men-new-2.png">
-          <h2 class="staff-title"> Coach </h2>
-          <h3 class="staff-name"> Coach JB Navarro </h3>
-          </div>
+    <!-- Barbers -->
+    <div class="barbers-card-grid">
+      <div class="barbers-card reveal">
+        <img class="barbers-img" src="../../Images/men-new-1-removebg-preview.png">
+        <h2 class="barbers-title"> Barbers </h2>
+        <h3 class="barbers-name"> Delgado </h3>
       </div>
 
-
-      <div class="barbers-card-grid">
-        <div class="barbers-card">
-          <img class="barbers-img" src="../../Images/men-new-1-removebg-preview.png">
-          <h2 class="barbers-title"> Barbers </h2>
-          <h3 class="barbers-name"> Delgado </h3>
-        </div>
-
-        <div class="barbers-card">
-          <img class="barbers-img" src="../../Images/men-new-2-removebg-preview.png">
-          <h2 class="barbers-title"> Barbers </h2>
-          <h3 class="barbers-name"> Marcus Steele </h3>
-        </div>
-
-        <div class="barbers-card">
-          <img class="barbers-img" src="../../Images/men1-removebg-preview (1).png">
-          <h2 class="barbers-title"> Barbers </h2>
-          <h3 class="barbers-name"> Marcus Steele </h3>
-        </div>
-      
+      <div class="barbers-card reveal">
+        <img class="barbers-img" src="../../Images/men-new-2-removebg-preview.png">
+        <h2 class="barbers-title"> Barbers </h2>
+        <h3 class="barbers-name"> Marcus Steele </h3>
       </div>
-      
 
-    </section>
-  </main>
-   <script src="../common.js"></script>
-  <script src="trainers.js"></script>
- 
+      <div class="barbers-card reveal">
+        <img class="barbers-img" src="../../Images/men1-removebg-preview (1).png">
+        <h2 class="barbers-title"> Barbers </h2>
+        <h3 class="barbers-name"> Marcus Steele </h3>
+      </div>
+    </div>
+
+  </section>
+
+</main>
+
+<script src="/common.js"></script>
+<script src="trainers.js"></script>
+
 </body>
 </html>
