--- a/about/about.html
+++ b/about/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="img/png" href="../../Images/image-removebg-preview (11).png">
-  <link rel="StyleSheet" href="../gym.css">
+  <link rel="StyleSheet" href="../gym2.css">
   <title>ALPHA GYM WEBSITE </title>
 </head>
 <body class="no-bg">
