--- a/pricing/pricing.html
+++ b/pricing/pricing.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="img/png" href="../../Images/image-removebg-preview (11).png">
-  <link rel="StyleSheet" href="../gym.css">
+  <link rel="StyleSheet" href="../gym2.css">
   <title>ALPHA GYM WEBSITE</title>
 </head>
 
@@ -13,7 +13,7 @@
 <header>
   <section class="header-container">
     <div class="img-logo-text">
-      <img class="img-logo" src="../../Images/alpha-logo-original.png">
+      <img class="img-logo" src="../../Images/alpha-logo-original.png" alt="Alpha Gym Logo">
       <h5 class="img-name"> Alpha </h5>
     </div>
 
@@ -37,6 +37,44 @@
     <h3 class="pricing-top-title-sub">
       <span class="choose">Choose</span> a plan that fits your fitness goals and start your transformation today.
     </h3>
+
+    <!-- NEW: Trust badges -->
+    <div class="pricing-badges">
+      <div class="badge">✅ Beginner-Friendly</div>
+      <div class="badge">💳 Cash / GCash / Bank</div>
+      <div class="badge">🏋️ Coaching Available</div>
+    </div>
+  </section>
+
+  <!-- NEW: Quick Compare -->
+  <section class="pricing-compare-container reveal">
+    <h2 class="pricing-compare-title">Quick Compare</h2>
+
+    <div class="compare-grid">
+      <div class="compare-card">
+        <h3>Best for Starters</h3>
+        <p>₱1500 / month</p>
+        <span class="compare-tag">Most Flexible</span>
+      </div>
+
+      <div class="compare-card">
+        <h3>Best Value</h3>
+        <p>₱5000 / 3 months</p>
+        <span class="compare-tag">Popular</span>
+      </div>
+
+      <div class="compare-card">
+        <h3>Best Results</h3>
+        <p>₱8000 / 6 months</p>
+        <span class="compare-tag">Consistency</span>
+      </div>
+
+      <div class="compare-card">
+        <h3>All-In</h3>
+        <p>₱11,000 / year</p>
+        <span class="compare-tag">Priority</span>
+      </div>
+    </div>
   </section>
 
   <!-- Pricing Cards -->
@@ -47,57 +85,90 @@
 
       <div class="price-card reveal">
         <a href="../contact/contact.html">
-          <h2 class="card-title-content">₱1500 / month</h2>
+          <div class="price-head">
+            <h2 class="card-title-content">₱1500 <span>/ month</span></h2>
+            <p class="price-sub">Great for beginners & casual training</p>
+          </div>
+
           <ul class="cards-lists">
-            <li>Unlimited gym access (6AM – 10PM)</li>
+            <li>Unlimited gym access</li>
             <li>Free fitness assessment</li>
             <li>Locker room access</li>
             <li>Water station access</li>
           </ul>
+
           <p class="click-title">Click to Join</p>
         </a>
       </div>
 
-      <div class="price-card reveal">
+      <div class="price-card featured reveal">
         <a href="../contact/contact.html">
-          <h2 class="card-title-content">₱5000 / 3 months</h2>
+          <div class="price-head">
+            <div class="featured-badge">MOST POPULAR</div>
+            <h2 class="card-title-content">₱5000 <span>/ 3 months</span></h2>
+            <p class="price-sub">Best value + guided training boost</p>
+          </div>
+
           <ul class="cards-lists">
             <li>Unlimited gym access</li>
             <li>2 personal training sessions</li>
             <li>Access to group classes (Zumba, HIIT)</li>
             <li>Free body composition check</li>
           </ul>
+
           <p class="click-title">Click to Join</p>
         </a>
       </div>
 
       <div class="price-card reveal">
         <a href="../contact/contact.html">
-          <h2 class="card-title-content">₱8000 / 6 months</h2>
+          <div class="price-head">
+            <h2 class="card-title-content">₱8000 <span>/ 6 months</span></h2>
+            <p class="price-sub">For serious consistency & progress</p>
+          </div>
+
           <ul class="cards-lists">
             <li>Unlimited gym + class access</li>
             <li>Monthly personal training session</li>
             <li>Customized workout program</li>
             <li>Nutrition guidance</li>
           </ul>
+
           <p class="click-title">Click to Join</p>
         </a>
       </div>
 
       <div class="price-card reveal">
         <a href="../contact/contact.html">
-          <h2 class="card-title-content">₱11,000 / Year</h2>
+          <div class="price-head">
+            <h2 class="card-title-content">₱11,000 <span>/ year</span></h2>
+            <p class="price-sub">Priority experience + max benefits</p>
+          </div>
+
           <ul class="cards-lists">
             <li>Warm-up & recovery zone access</li>
             <li>Unlimited personal training</li>
             <li>Priority class booking</li>
             <li>Free gym merchandise</li>
           </ul>
+
           <p class="click-title">Click to Join</p>
         </a>
       </div>
 
     </div>
+
+    <!-- NEW: Inclusions -->
+    <section class="pricing-includes-container reveal">
+      <h2 class="includes-title">What’s Included in All Plans</h2>
+
+      <div class="includes-grid">
+        <div class="include-item">✅ Safe & Clean Facility</div>
+        <div class="include-item">✅ Strength + Cardio Zones</div>
+        <div class="include-item">✅ Community Support</div>
+        <div class="include-item">✅ Coaching Options Available</div>
+      </div>
+    </section>
 
     <p class="wait-title reveal">
       Follow us on social media and stay locked in for exclusive discounts, latest prices, and special gym offers you don’t want to miss.
@@ -110,7 +181,6 @@
         </a>
       </div>
     </div>
-
   </section>
 
   <!-- FAQ -->
@@ -133,6 +203,12 @@
       <h4 class="item-title">What payment methods do you accept?</h4>
       <p class="item-det">We accept cash, GCash, and bank transfers.</p>
     </div>
+
+    <!-- NEW FAQ -->
+    <div class="faq-item-card reveal">
+      <h4 class="item-title">Do you have coaches available?</h4>
+      <p class="item-det">Yes. You can request coaching when you message us via the Contact page.</p>
+    </div>
   </section>
 
 </main>
@@ -150,6 +226,5 @@
 
 <script src="/common.js"></script>
 <script src="pricing.js"></script>
-
 </body>
 </html>
