--- a/index.html
+++ b/index.html
@@ -263,5 +263,11 @@
   <script src="index.js"></script>
   <script src="/common.js"></script>
 
+  <div id="lightbox">
+  <span id="lightboxClose">&times;</span>
+  <img id="lightboxImg" src="" alt="Zoomed Image" />
+ 
+
+</div>
 </body>
 </html>
